@@ -244,7 +244,7 @@ It can be configured with the following parameters:
 
 * name (alias package.name) - defaults to project.artifactId
 *  description (alias package.description) - defaults to project.description
-*  jvmArgs (alias agent-package.jvmArgs) - jvm-gc arguments
+*  jvmArgs (alias agent-package.jvmArgs) - jvm-gc arguments. The default value is `-XX:+UseConcMarkSweepGC -XX:+CMSParallelRemarkEnabled -XX:+ScavengeBeforeFullGC -XX:+CMSScavengeBeforeRemark`". Will be overwritten if   other options are provided.
 *  arguments (alias agent-package.arguments) - arguments passed on Java application startup
 *  encoding (alias project.build.sourceEncoding)  - defaults to UTF-8
 *  heap (alias agent-package.heap) - defaults to min = 128MB max = 384MB
